Refactor MatrixService: use method references and minor cleanups
Replace lambda expressions with method references, use `getFirst()` instead of `get(0)`, replace `isInRange` for today-in-range check, and apply static import for `toMap`.